[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI and Menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://wedding sim temp main menu.png" type="Texture" id=2]
[ext_resource path="res://PORKYS_.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Milku.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 125
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 5 )

[node name="MainMenu" type="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1920.0
margin_top = -1080.0
script = ExtResource( 1 )

[node name="WeddingSimTempMainMenu" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 1.69097, 1.37905 )
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2"]
margin_right = 1920.0
margin_bottom = 538.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Wedding Disorganizer
"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
margin_top = 542.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 31

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 89.0
custom_constants/margin_right = 500
custom_constants/margin_left = 500

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer"]
margin_left = 500.0
margin_right = 1420.0
margin_bottom = 89.0
focus_neighbour_top = NodePath("../../MarginContainer4/QuitButton")
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_top = 120.0
margin_right = 1920.0
margin_bottom = 209.0
custom_constants/margin_right = 500
custom_constants/margin_left = 500

[node name="Saves" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer2"]
margin_left = 500.0
margin_right = 1420.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 3 )
text = "Saves"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_top = 240.0
margin_right = 1920.0
margin_bottom = 329.0
custom_constants/margin_right = 500
custom_constants/margin_left = 500

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer3"]
margin_left = 500.0
margin_right = 1420.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 4 )
text = "Settings"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_top = 360.0
margin_right = 1920.0
margin_bottom = 449.0
custom_constants/margin_right = 500
custom_constants/margin_left = 500

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer4"]
margin_left = 500.0
margin_right = 1420.0
margin_bottom = 89.0
focus_neighbour_bottom = NodePath("../../MarginContainer/StartButton")
custom_fonts/font = SubResource( 5 )
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer2/Saves" to="." method="_on_Saves_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer3/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer4/QuitButton" to="." method="_on_QuitButton_pressed"]
